# vicuna

./: .gitignore  LICENSE  README.md  vicuna.opam
examples/: dune  main.ml
src/: camera.ml  camera.mli  color.ml  color.mli  dune  main.ml  rays.ml  rays.mli  scene.ml  scene.mli  shade.ml  shade.mli  shapes.ml  shapes.mli  transforms.ml  transforms.mli  vector.ml  vector.mli
tests/: test.ml  test_vector.ml
